# Yomu-Server

./: .gitignore  README.md  pyproject.toml
yomuserver/: __init__.py  core.py  extension.json  http.py  settings.json  settings.py  websocket.py
yomuserver/dependencies/qhttpserver/: __init__.py  handler.py  request.py  response.py  router.py  server.py  sse.py  utils.py
yomuserver/routes/: __init__.py  categories.py  chapters.py  library.py  mangas.py  sources.py  sse.py  utils.py
yomuserver/routes/web/: __init__.py  core.py
yomuserver/routes/web/static/: index.html
yomuserver/routes/web/static/assets/: index-B8_l7noO.js  index-CBnlVJ6_.css  index-CDFTwrpe.css  index-D9SNt-lT.js
