[tool.poetry]
name = "yomu-server"
version = "1.0.1"
description = "An server extension for the Yomu manga reader"
authors = ["Srpboyz <srpboyz69@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyqt6 = "^6.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
